Fogbugz 33980 - fixed header banner spacing issue

--- a/drupal/profiles/takepart/themes/takepart3/css/tastemakers.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/tastemakers.css
@@ -1,3 +1,9 @@
+/* # Header Banner
+================================================== */
+.region-highlighted .block-block .content {
+  font-size: 0;
+}
+
 /* # Header Navigation
 ================================================== */
 .block-menu.block-boxes-bid-menu-menu-tastemakers ul.menu li {
